move/PCI_8164.H

I16 FNTYPE _8164_set_security_key(I16 CardNo, U16 old_secu_code, U16 New_secu_code);
I16 FNTYPE _8164_check_security_key( I16 CardNo, U16 secu_code);
I16 FNTYPE _8164_reset_security_key(I16 CardNo);
void FNTYPE _8164_enable_card_id();
I16 FNTYPE _8164_check_card(I16 CardNo);
U16 FNTYPE _8164_read_axis_di(I16 AxisNo);
I16 FNTYPE _8164_write_axis_do(I16 AxisNo, I16 on_off);
I16 FNTYPE _8164_get_pxi_trigger_value(I16 CardNo, U16 *value);
I16 FNTYPE _8164_set_pxi_trigger_value(I16 CardNo, U16 Value);
I16 FNTYPE _8164_enable_pxi_input(I16 CardNo, I16 STA, I16 STP, I16 CEMG);
I16 FNTYPE _8164_select_pxi_output(I16 CardNo, I16 source, I16 pxi_channel);
// PCI-8164IL Only
I16 FNTYPE _8164_il_get_position(I16 AxisNo, F64 *cmp_pos);
I16 FNTYPE _8164_il_set_position(I16 AxisNo, F64 cmp_pos);
I16 FNTYPE _8164_il_set_compare(I16 AxisNo, F64 smaller, F64 bigger);
I16 FNTYPE _8164_il_get_compare(I16 AxisNo, F64 *smaller, F64 *bigger);
I16 FNTYPE _8164_il_set_counter_mode(I16 AxisNo, I16 mode);
I16 FNTYPE _8164_il_set_interlock(I16 CardNo, I16 control);
I16 FNTYPE _8164_il_set_counter_src(I16 AxisNo, I16 src);
I16 FNTYPE _8164_async_avoid(I16 CardNo, I32 Boundary, I16 cmp_mode, I16 Enable_Mode);
I16 FNTYPE _8164_aa_set_counter_mode(I16 CardNo, I16 axis0_mode, I16 axis1_mode, I16 cnt_src);
I16 FNTYPE _8164_aa_get_boundary(I16 CardNo, F64 *boundary);
I16 FNTYPE _8164_aa_reset_error_value(I16 CardNo, F64 err_value);
I16 FNTYPE _8164_aa_get_error_value(I16 CardNo, F64 *err_value);
I16 FNTYPE _8164_aa_release_sd_latch(I16 CardNo);
I16 FNTYPE _8164_cpld_write(I16 CardNo, U16 Offset, U16 Data);
U16 FNTYPE _8164_cpld_read(I16 CardNo, U16 Offset);
I16 FNTYPE _8164_software_reset(I16 cardNo);