move/Pci_8164.BAS


Declare Function B_8164_read_axis_di Lib "8164.dll" Alias "_8164_read_axis_di" (ByVal AxisNo As Integer) As Integer
Declare Function B_8164_write_axis_do Lib "8164.dll" Alias "_8164_write_axis_do" (ByVal AxisNo As Integer, ByVal on_off As Integer) As Integer

Declare Function B_8164_enable_card_id Lib "8164.dll" Alias "_8164_enable_card_id" () As Integer
Declare Function B_8164_check_card Lib "8164.dll" Alias "_8164_check_card" (ByVal CardNo As Integer) As Integer
Declare Function B_8164_get_pxi_trigger_value Lib "8164.dll" Alias "_8164_get_pxi_trigger_value" (ByVal CardNo As Integer, Value As Integer) As Integer
Declare Function B_8164_set_pxi_trigger_value Lib "8164.dll" Alias "_8164_set_pxi_trigger_value" (ByVal CardNo As Integer, ByVal Value As Integer) As Integer
Declare Function B_8164_enable_pxi_input Lib "8164.dll" Alias "_8164_enable_pxi_input" (ByVal CardNo As Integer, ByVal STA As Integer, ByVal STP As Integer, ByVal CEMG As Integer) As Integer
Declare Function B_8164_select_pxi_output Lib "8164.dll" Alias "_8164_select_pxi_output" (ByVal CardNo As Integer, ByVal source As Integer, ByVal pxi_channel As Integer) As Integer

Declare Function B_8164_il_get_position Lib "8164.dll" Alias "_8164_il_get_position" (ByVal AxisNo As Integer, cmp_pos As Double) As Integer
Declare Function B_8164_il_set_position Lib "8164.dll" Alias "_8164_il_set_position" (ByVal AxisNo As Integer, ByVal cmp_pos As Double) As Integer
Declare Function B_8164_il_set_counter_mode Lib "8164.dll" Alias "_8164_il_set_counter_mode" (ByVal AxisNo As Integer, ByVal mode As Integer) As Integer
Declare Function B_8164_il_set_compare Lib "8164.dll" Alias "_8164_il_set_compare" (ByVal AxisNo As Integer, ByVal smaller As Double, ByVal bigger As Double) As Integer
Declare Function B_8164_il_get_compare Lib "8164.dll" Alias "_8164_il_get_compare" (ByVal AxisNo As Integer, smaller As Double, bigger As Double) As Integer
Declare Function B_8164_il_set_interlock Lib "8164.dll" Alias "_8164_il_set_interlock" (ByVal CardNo As Integer, ByVal control As Integer) As Integer
Declare Function B_8164_il_set_counter_src Lib "8164.dll" Alias "_8164_il_set_counter_src" (ByVal AxisNo As Integer, ByVal src As Integer) As Integer

Declare Function B_8164_async_avoid Lib "8164.dll" Alias "_8164_async_avoid" (ByVal CardNo As Integer, ByVal boundary As Long, ByVal cmp_mode As Integer, ByVal Enable As Integer) As Integer
Declare Function B_8164_aa_set_counter_mode Lib "8164.dll" Alias "_8164_aa_set_counter_mode" (ByVal CardNo As Integer, ByVal axis0_mode As Integer, ByVal axis1_mode As Integer, ByVal cnt_src As Integer) As Integer
Declare Function B_8164_aa_get_boundary Lib "8164.dll" Alias "_8164_aa_get_boundary" (ByVal CardNo As Integer, boundary As Double) As Integer
Declare Function B_8164_aa_reset_error_value Lib "8164.dll" Alias "_8164_aa_reset_error_value" (ByVal CardNo As Integer, ByVal err_value As Double) As Integer
Declare Function B_8164_aa_get_error_value Lib "8164.dll" Alias "_8164_aa_get_error_value" (ByVal CardNo As Integer, err_value As Double) As Integer

Declare Function B_8164_cpld_write Lib "8164.dll" Alias "_8164_cpld_write" (ByVal CardNo As Integer, ByVal Offset As Integer, ByVal Data As Integer) As Integer
Declare Function B_8164_cpld_read Lib "8164.dll" Alias "_8164_cpld_read" (ByVal CardNo As Integer, ByVal Offset As Integer) As Integer
Declare Function B_8164_software_reset Lib "8164.dll" Alias "_8164_software_reset" (ByVal CardNo As Integer) As Integer

Declare Function B_8164_aa_release_sd_latch Lib "8164.dll" Alias "_8164_aa_release_sd_latch" (ByVal CardNo As Integer) As Integer

Declare Function B_8164_set_security_key Lib "8164.dll" Alias "_8164_set_security_key" (ByVal CardNo As Integer, ByVal old_secu_code As Integer, ByVal New_secu_code As Integer) As Integer
Declare Function B_8164_check_security_key Lib "8164.dll" Alias "_8164_check_security_key" (ByVal CardNo As Integer, ByVal secu_code As Integer) As Integer
Declare Function B_8164_reset_security_key Lib "8164.dll" Alias "_8164_reset_security_key" (ByVal CardNo As Integer) As Integer

